--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,22 @@
 {
+   "name": "dws/sftw",
+    "type": "library",
+    "description": "South for the Winter (sftw) is a PDO-based DB migration tool for PHP 5.3",
+    "keywords": ["db","migration", "pdo"],
+    "homepage": "http://github.com/startupdevs/sftw",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "David Weinraub",
+            "email": "david.weinraub@diamondwebservices.com",
+            "homepage": "http://www.diamondwebservices.com/",
+            "role": "Developer"
+        }
+    ],
 	"require": {
+        "php": ">=5.3.0",
 	    "symfony/Console": "2.0.*"
 	},
-	
 	"autoload": {
 		"psr-0" : { 
 			"Dws" : "lib/"
